# RepoRead

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOP.md  README.md  build-dmg.sh  build-ipad-appstore.sh  build-ipad-simulator.sh  build-ipad.sh  build-macos.sh  inc_major_version.sh  inc_minor_version.sh  inc_patch_version.sh  index.html  package-lock.json  package.json  patch_major_version.sh  patch_version.sh
.claude/: settings.local.json
RepoView/: index.html  package.json
RepoView/src/: App.css
RepoView/src-tauri/: Cargo.toml  tauri.conf.json
RepoView/src-tauri/src/: lib.rs  main.rs
RepoView/src/components/: UrlInput.tsx
scripts/: release_homebrew.sh
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.iOS.plist  Info.plist  app.provisionprofile  tauri.conf.homebrew.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  repo.rs
src/components/: ChatSidebar.tsx  CodeViewer.tsx  ContentSearch.css  ContentSearch.tsx  FileHistory.css  FileHistory.tsx  FileSearch.css  FileSearch.tsx  FileTree.tsx  InterpretModal.tsx  RepoList.tsx  ResizableSidebar.tsx  ScreenshotOverlay.tsx
