[package]
name = "repoview"
version = "0.1.0"
description = "Read GitHub repositories on iPad. No clone. No setup. Just code."
authors = ["you"]
edition = "2021"

[lib]
name = "repoview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
zip = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "6"
urlencoding = "2"

