[package]
name = "reporead"
version = "0.1.2"
description = "Read GitHub repositories on iPad. No clone. No setup. Just code."
authors = ["you"]
edition = "2021"

[lib]
name = "reporead_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.20"
zip = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
directories = "6"
urlencoding = "2"
base64 = "0.22"
opener = "0.7"
arboard = { version = "3", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
